# rss-discord-bot

./: .dockerignore  .gitignore  Dockerfile  README  README.md  config.yaml  docker-compose.yml  main.py  pyproject.toml  sent_items.json
discord/: webhook_sender.py
feeds/: feed_handler.py
utils/: filters.py  storage.py
