[project]
name = "rss-discord-bot"
version = "0.1.0"
description = "rss feed to discord server"
authors = [
    {name = "Oatmeal4Breakfast",email = "elvin.salcedo17@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feedparser (>=6.0.11,<7.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "pyyml (>=0.0.2,<0.0.3)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "html2text (>=2025.4.15,<2026.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
